Retry indefinitively when connection is broken